--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,18 @@ body {
   font-size: 12px;
   color: #666; }
 
+input[type=text], textarea {
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  border: 1px solid #DDDDDD; }
+
+input[type=text]:focus, textarea:focus {
+  box-shadow: 0 0 5px #51cbee;
+  border: 1px solid #51cbee; }
+
 .clearfix:after {
   visibility: hidden;
   display: block;
@@ -39,13 +51,32 @@ body {
   text-decoration: none;
   color: #fff;
   padding: 10px;
-  -webkit-border-radius: 7px;
   border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
   border: 0; }
+  .button:hover {
+    background-color: gray;
+    cursor: pointer; }
 
 .link {
   color: #0099ff;
-  text-decoration: none; }
+  text-decoration: none;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
+  .link:hover {
+    color: gray;
+    cursor: pointer; }
 
 .topBar {
   background-color: #2e2e2e;
@@ -69,8 +100,11 @@ body {
     .topBar ul.socialMedia li {
       display: inline-block;
       background: #787878 url(../images/social-media.png) 8px center no-repeat;
-      -webkit-border-radius: 50px;
       border-radius: 50px;
+      -webkit-border-radius: 50px;
+      -moz-border-radius: 50px;
+      -ms-border-radius: 50px;
+      -o-border-radius: 50px;
       margin-right: 10px; }
       .topBar ul.socialMedia li:last-child {
         margin-right: 0px; }
@@ -97,18 +131,39 @@ body {
         width: 32px;
         height: 32px; }
 
-.header {
-  margin-top: 41px; }
+.header .wrapper {
+  position: relative; }
+
+.btnToggle {
+  background-color: #2e2e2e;
+  color: #fff;
+  display: block;
+  width: 31px;
+  text-align: center;
+  text-decoration: none;
+  padding: 9px 0;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  border-radius: 0 0 7px 7px;
+  -webkit-border-radius: 0 0 7px 7px;
+  -moz-border-radius: 0 0 7px 7px;
+  -ms-border-radius: 0 0 7px 7px;
+  -o-border-radius: 0 0 7px 7px; }
 
 .inputSearch {
   width: 205px;
   padding: 10px;
-  -webkit-border-radius: 7px;
   border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
   border: 0;
   background-color: #f1f1f1; }
 
 .navMain {
+  padding-top: 41px;
   border-bottom: 2px solid #f1f1f1; }
   .navMain a {
     text-decoration: none;
@@ -171,7 +226,7 @@ body {
       color: #666; }
     .slide .contentSlide a {
       display: block;
-      width: 126px;
+      width: 110px;
       font-size: 16px;
       margin-top: 20px; }
   .slide .imgSlide {
@@ -192,17 +247,24 @@ body {
     height: 15px;
     background-color: transparent;
     border: 3px solid #000;
+    border-radius: 50px;
     -webkit-border-radius: 50px;
-    border-radius: 50px; }
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px; }
     .pagination span.active {
       background-color: #000; }
 
 .thumb {
-  max-width: 219px;
+  max-width: 225px;
   text-align: center;
-  margin: 0 25px 30px 0; }
+  margin: 0 20px 30px 0; }
   .thumb:nth-child(2n) {
     margin-right: 0px; }
+  .thumb:nth-child(3) {
+    margin-bottom: 0px; }
+  .thumb:nth-child(4) {
+    margin-bottom: 0px; }
   .thumb h5 {
     font-size: 16px;
     line-height: 19px;
@@ -297,8 +359,11 @@ footer {
       display: block;
       background-color: #232323;
       border: 0;
-      -webkit-border-radius: 10px;
       border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
       padding: 11px;
       margin-bottom: 10px;
       padding-right: 0; }
@@ -308,8 +373,11 @@ footer {
       height: 110px;
       background-color: #232323;
       border: 0;
-      -webkit-border-radius: 10px;
       border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
       padding: 11px;
       margin-bottom: 10px;
       padding-right: 0; }
@@ -331,6 +399,10 @@ footer {
   position: absolute;
   border: #Bababa 1px solid;
   border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
   padding: 5px 10px;
   cursor: pointer;
   background-color: #fff;
